Added validation for duplicate particulars

--- a/cutoff.html
+++ b/cutoff.html
@@ -117,7 +117,7 @@
 </div>
 
     <br>
-    <div id="grandTotal" style="font-size: 50px; text-align: center; color: rgb(21, 35, 47);" ></div>
+    <div id="grandTotal" style="font-size: 40px; text-align: center; color: rgb(21, 35, 47); text-decoration: solid;" ></div>
     <br><br><br><br>
     
 </div>
