--- a/church1/income-records.html
+++ b/church1/income-records.html
@@ -103,7 +103,7 @@
                     data.forEach(row => {
                         let tr = document.createElement('tr');
                         // Format the date
-                        const date = new Date(row['timestamp']);
+                        const date = new Date(row['DATE']);
                         const formattedDate = date.toLocaleDateString('en-US', {
                             day: 'numeric',
                             month: 'short',
@@ -113,7 +113,7 @@
                         tr.innerHTML = `
                             <td>${row['NUM']}</td>
                             <td>${row['USER']}</td>
-                            <td>${formattedDate}</td>
+                             <td>${formattedDate}</td>
                             <td>${row['TITHE']}</td>
                             <td>${row['C.B.F']}</td>
                             <td>${row['LOOSE-OFFERING']}</td>
