--- a/church1/expenditure-records.html
+++ b/church1/expenditure-records.html
@@ -99,7 +99,7 @@
                     data.forEach(row => {
                         let tr = document.createElement('tr');
                         // Format the date
-                        const date = new Date(row['timestamp']);
+                        const date = new Date(row['DATE']);
                         const formattedDate = date.toLocaleDateString('en-US', {
                             day: 'numeric',
                             month: 'short',
