--- a/church1/income-book.html
+++ b/church1/income-book.html
@@ -142,7 +142,6 @@
 
 // Retrieve the date value
 const dateValue = document.getElementById("incomeDate").value;
-
 // Validate the date
 if (!dateValue) {
   Swal.fire({
@@ -152,6 +151,11 @@ if (!dateValue) {
   });
   return; // Stop further execution
 }
+
+// Format the date to DD-MMM-YYYY
+const dateObject = new Date(dateValue);
+const monthNames = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
+const formattedDate = `${String(dateObject.getDate()).padStart(2, '0')}-${monthNames[dateObject.getMonth()]}-${dateObject.getFullYear()}`;
 
 // Validate user inputs
 const rows = document.querySelectorAll("#amountTable tbody tr");
@@ -213,7 +217,7 @@ if (duplicateParticulars.length > 0) {
   return; // Stop further execution
 }
 
-//**********************************************************************
+//****************************************************************************
 
 // Proceed with saving if all particulars are valid
 const formData = new FormData(form);
@@ -222,8 +226,8 @@ const formData = new FormData(form);
     formData.append("USER", UserInfo.fname);
   }
 
-  // Append the date to the form data
-  formData.append("DATE", dateValue);
+  // Append the formatted date to the form data
+  formData.append("DATE", formattedDate);
 
   let totalIncome = 0;
   const amountInputs = document.querySelectorAll("#amountTable tbody tr td:nth-child(3) input");
