--- a/church1/expenditure-records.html
+++ b/church1/expenditure-records.html
@@ -98,18 +98,11 @@
                     const tableBody = document.getElementById('tableBody');
                     data.forEach(row => {
                         let tr = document.createElement('tr');
-                        // Format the date
-                        const date = new Date(row['DATE']);
-                        const formattedDate = date.toLocaleDateString('en-US', {
-                            day: 'numeric',
-                            month: 'short',
-                            year: 'numeric'
-                        }).replace(',', ', ');
                         
                         tr.innerHTML = `
                             <td>${row['NUM']}</td>
                             <td>${row['USER']}</td>
-                            <td>${formattedDate}</td>
+                            <td>${row['DATE']}</td>
                             <td>${row['UTILITIES']}</td>
                             <td>${row['DEACONERY']}</td>
                             <td>${row['LOCAL-TRANSPORT']}</td>
