Added the fomarted date to conference and district too

--- a/church1/conference-records.html
+++ b/church1/conference-records.html
@@ -100,18 +100,11 @@
                     const tableBody = document.getElementById('tableBody');
                     data.forEach(row => {
                         let tr = document.createElement('tr');
-                        // Format the date
-                        const date = new Date(row['DATE']);
-                        const formattedDate = date.toLocaleDateString('en-US', {
-                            day: 'numeric',
-                            month: 'short',
-                            year: 'numeric'
-                        }).replace(',', ', ');
                         
                         tr.innerHTML = `
                             <td>${row['NUM']}</td>
                             <td>${row['USER']}</td>
-                            <td>${formattedDate}</td>
+                            <td>${row['DATE']}</td>
                             <td>${row['TITHE']}</td>
                             <td>${row['C.B.F']}</td>
                             <td>${row['LOOSE-OFFERING']}</td>
